--- a/Project/ui/manual.ui
+++ b/Project/ui/manual.ui
@@ -19,9 +19,12 @@
      <rect>
       <x>90</x>
       <y>30</y>
-      <width>601</width>
+      <width>611</width>
       <height>521</height>
      </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::RightToLeft</enum>
     </property>
     <property name="frameShape">
      <enum>QFrame::StyledPanel</enum>
@@ -37,6 +40,9 @@
        <width>351</width>
        <height>51</height>
       </rect>
+     </property>
+     <property name="layoutDirection">
+      <enum>Qt::RightToLeft</enum>
      </property>
      <property name="text">
       <string>ADD MANUAL PRODUCT DETAIL</string>
@@ -67,7 +73,7 @@
        <x>63</x>
        <y>180</y>
        <width>501</width>
-       <height>101</height>
+       <height>51</height>
       </rect>
      </property>
     </widget>
