--- a/Project/ui/main_window.ui
+++ b/Project/ui/main_window.ui
@@ -27,51 +27,52 @@
     <property name="bottomMargin">
      <number>10</number>
     </property>
-        <item>
-         <layout class="QVBoxLayout" name="infoSection">
-            <property name="spacing">
-             <number>10</number>
-            </property>
-            <property name="bottomMargin">
-             <number>0</number>
-            </property>
-            <item>
-             <widget class="QLabel" name="labelCompany">
-                <property name="text">
-                 <string>Company Name</string>
-                </property>
-             </widget>
-            </item>
-            <item>
-             <layout class="QHBoxLayout" name="dateArea">
-                <property name="spacing">
-                 <number>0</number>
-                </property>
-                <item>
-                 <widget class="QLabel" name="labelDate">
-                    <property name="text">
-                     <string>2025-10-23</string>
-                    </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QLabel" name="labelDay">
-                    <property name="text">
-                     <string>Thursday</string>
-                    </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QLabel" name="labelTime">
-                    <property name="text">
-                     <string>12:00</string>
-                    </property>
-                 </widget>
-                </item>
-             </layout>
-            </item>
-         </layout>
-        </item>
+    <item>
+     <layout class="QHBoxLayout" name="infoSection">
+      <property name="spacing">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="QLabel" name="labelDate">
+        <property name="text">
+         <string>2025-10-23</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+        </property>
+        <property name="margin">
+         <number>30</number>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="labelCompany">
+        <property name="text">
+         <string>""</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="labelDayTime">
+        <property name="text">
+         <string>Thursday 12:00</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
+        <property name="margin">
+         <number>30</number>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
     <item>
      <layout class="QHBoxLayout" name="workArea">
       <property name="spacing">
@@ -83,19 +84,13 @@
       <item>
        <widget class="QFrame" name="paymentFrame"/>
       </item>
-            <item>
-             <widget class="QFrame" name="menuFrame">
-                <property name="frameShape">
-                 <enum>QFrame::StyledPanel</enum>
-                </property>
-                <property name="minimumWidth">
-                 <number>80</number>
-                </property>
-                <property name="maximumWidth">
-                 <number>100</number>
-                </property>
-             </widget>
-            </item>
+      <item>
+       <widget class="QFrame" name="menuFrame">
+        <property name="frameShape">
+         <enum>QFrame::StyledPanel</enum>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
    </layout>
