Menu Product. ADD, REMOVE, UPDATE function added. Product not in DB when scanned opens ADD product dialog. Barcode scanner focus issue remains.

--- a/Project/ui/main_window.ui
+++ b/Project/ui/main_window.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Selvam POS Application</string>
+   <string>Selvam POS</string>
   </property>
   <widget class="QWidget" name="contentWidget">
    <layout class="QVBoxLayout" name="mainWindowLayout">
