--- a/Project/ui/logout_menu.ui
+++ b/Project/ui/logout_menu.ui
@@ -6,21 +6,26 @@
       <rect>
         <x>0</x>
         <y>0</y>
-        <width>400</width>
-        <height>500</height>
+        <width>380</width>
+        <height>200</height>
       </rect>
     </property>
+ 
     <layout class="QVBoxLayout" name="verticalLayout">
+      <property name="leftMargin"><number>10</number></property>
+      <property name="topMargin"><number>0</number></property>
+      <property name="rightMargin"><number>10</number></property>
+      <property name="bottomMargin"><number>10</number></property>
       <item>
         <widget class="QFrame" name="customTitleBar">
           <property name="frameShape">
             <enum>QFrame::NoFrame</enum>
           </property>
           <layout class="QHBoxLayout" name="customTitleLayout">
-            <property name="leftMargin"><number>10</number></property>
-            <property name="topMargin"><number>6</number></property>
-            <property name="rightMargin"><number>6</number></property>
-            <property name="bottomMargin"><number>6</number></property>
+            <property name="leftMargin"><number>0</number></property>
+            <property name="topMargin"><number>0</number></property>
+            <property name="rightMargin"><number>0</number></property>
+            <property name="bottomMargin"><number>10</number></property>
             <item>
               <widget class="QLabel" name="customTitle">
                 <property name="text"><string>Logout</string></property>
@@ -34,7 +39,7 @@
                 </property>
               </spacer>
             </item>
-            <item>
+            <item alignment="Qt::AlignRight|Qt::AlignTop">
               <widget class="QPushButton" name="customCloseBtn">
                 <property name="text"><string>×</string></property>
                 <property name="minimumSize"><size><width>28</width><height>28</height></size></property>
@@ -45,19 +50,6 @@
             </item>
           </layout>
         </widget>
-      </item>
-      <item>
-        <spacer name="verticalSpacer_top">
-          <property name="orientation">
-            <enum>Qt::Vertical</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-            <size>
-              <width>20</width>
-              <height>40</height>
-            </size>
-          </property>
-        </spacer>
       </item>
       <item>
         <widget class="QLabel" name="label_title">
@@ -77,46 +69,11 @@
         </widget>
       </item>
       <item>
-        <spacer name="verticalSpacer_middle">
-          <property name="orientation">
-            <enum>Qt::Vertical</enum>
-          </property>
+        <spacer name="spacingTitleButtons">
+          <property name="orientation"><enum>Qt::Vertical</enum></property>
+          <property name="sizeType"><enum>QSizePolicy::Fixed</enum></property>
           <property name="sizeHint" stdset="0">
-            <size>
-              <width>20</width>
-              <height>40</height>
-            </size>
-          </property>
-        </spacer>
-      </item>
-      <item>
-        <widget class="QLabel" name="label_message">
-          <property name="font">
-            <font>
-              <pointsize>12</pointsize>
-            </font>
-          </property>
-          <property name="text">
-            <string>Are you sure you want to logout? Once you logout you need to login again. Are you Ok?</string>
-          </property>
-          <property name="alignment">
-            <set>Qt::AlignCenter</set>
-          </property>
-          <property name="wordWrap">
-            <bool>true</bool>
-          </property>
-        </widget>
-      </item>
-      <item>
-        <spacer name="verticalSpacer_buttons">
-          <property name="orientation">
-            <enum>Qt::Vertical</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-            <size>
-              <width>20</width>
-              <height>40</height>
-            </size>
+            <size><width>20</width><height>30</height></size>
           </property>
         </spacer>
       </item>
@@ -171,19 +128,6 @@
             </widget>
           </item>
         </layout>
-      </item>
-      <item>
-        <spacer name="verticalSpacer_bottom">
-          <property name="orientation">
-            <enum>Qt::Vertical</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-            <size>
-              <width>20</width>
-              <height>40</height>
-            </size>
-          </property>
-        </spacer>
       </item>
     </layout>
   </widget>
